점점 완성되어가는 메모쟝

--- a/memo_test/public/css/body.css
+++ b/memo_test/public/css/body.css
@@ -29,7 +29,7 @@ a:active{
 }
 
 body{
-     font-family: 'EliceDigitalBaeum';
+     font-family: 'EarlyFontDiary';
      color: black;
      /* font-size: 14px; */
 }
@@ -53,7 +53,7 @@ img{
     /* border: 0; */
     background-color: #81D4F5;
     /* #02A9EA */
-    font-family: 'EliceDigitalBaeum';
+    font-family: 'EarlyFontDiary';
     color: white;
     text-align: center;
     display:inline-block;
