--- a/memo_test/public/css/loginform.css
+++ b/memo_test/public/css/loginform.css
@@ -1,6 +1,6 @@
 .inputform{
     background-color: #F0F0F0;
-    font-family: 'EliceDigitalBaeum';
+    font-family: 'EarlyFontDiary';
     border: 0;
     width: 20%;
     height: 50px;
@@ -20,7 +20,7 @@
 .signupform{
     border: 1px solid #787878;
     background-color: white;
-    font-family: 'EliceDigitalBaeum';
+    font-family: 'EarlyFontDiary';
     width: 20%;
     text-align: left;
     padding-left: 3px;
